@@ -44,7 +44,7 @@ SourceVersion* SourceVersion::parseFromFile(const Version::InitializationParamet
 		// go to starting byte of the entry
 		initParams.file->seek(initParams.offset);
 
-		internal::TagParser parser(initParams.file.get());
+		internal::TagParser parser(initParams.file);
 		internal::TagParser::StringRange tagName, tagValue;
 
 		static const sregex checksumsLineRegex = sregex::compile(" ([[:xdigit:]]+) +(\\d+) +(.*)", regex_constants::optimize);
